Handled overlapping issue of reports notification

--- a/src/components/disaster-map/disaster-map.less
+++ b/src/components/disaster-map/disaster-map.less
@@ -21,6 +21,7 @@
   and (-webkit-min-device-pixel-ratio: 1) {
     width: 300px;
     white-space: normal;
+    top: 140px;
   }
 }
 
